<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_500"
    tools:context=".SettingsActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/round_bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_bg"
            android:contentDescription="@string/backbtn"
            android:foreground="@drawable/baseline_arrow_back_ios_24"
            android:foregroundGravity="center" />

        <TextView
            android:id="@+id/profile_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textColor="@color/red_700"
            android:textSize="20sp" />


        <RelativeLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_bg">

            <TextView
                android:id="@+id/hint_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/user_name"
                android:textColor="@color/red_500"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/idtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_id"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/fetching_data"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_bg">

            <TextView
                android:id="@+id/hint_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/name"
                android:textColor="@color/red_500"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint_name"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/fetching_data"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_bg">

            <TextView
                android:id="@+id/hintEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/email"
                android:textColor="@color/red_500"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hintEmail"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/fetching_data"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_bg"
            android:text="@string/sign_out">

        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_margin="4dp"
        android:background="@drawable/round_bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.04">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/todo"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>